--- a/FAQ.wiki
+++ b/FAQ.wiki
@@ -35,6 +35,6 @@ Not quite. For example, if for some reason you have a `.css` or `.js` file under
 
 This situation is unlikely, but you should be aware that Minify has no way of knowing about file restrictions that are managed outside of the file system itself. If you need to ensure that users don't have access to a `.css` or `.js` file under your document root, make sure that file isn't readable by the PHP process.
 
-= Is Minify used by any large-scale production websites? =
+= Is Minify used in production by any large-scale websites? =
 
 Currently I'm not aware of any large-scale websites running Minify, but the project is still very young so not many people have heard of it yet. If you know of such a site, please [mailto:ryan@wonko.com contact me].
