Edited wiki page through web user interface.

--- a/SitesUsingMinify.wiki
+++ b/SitesUsingMinify.wiki
@@ -1,5 +1,5 @@
 #summary A non-comprehensive list of websites using Minify.
 
-= Blogs =
-
-  * [http://wonko.com/ wonko.com]
+  * [http://wonko.com/ wonko.com] (developer blog)
+  * [http://mrclay.org/ mrclay.org] (developer blog) using 2.0
+  * [http://www.miamianimalremoval.com/ Miami Animal Removal] using 2.0
