--- a/UserGuide.wiki
+++ b/UserGuide.wiki
@@ -1,5 +1,5 @@
 #summary Your friendly guide to installing and using Minify.
-#labels Featured,Phase-Deploy
+#labels Phase-Deploy
 
 *Note:* This currently applies to the series 1.x releases but will be updated soon. See VersionTwo for information about the latest release.
 
