--- a/VersionTwo.wiki
+++ b/VersionTwo.wiki
@@ -1,5 +1,5 @@
 #summary About Version 2
-#labels Phase-Implementation,Phase-Design
+#labels Phase-Implementation,Phase-Design,Featured
 
 = Minify 2 =
 
